Win/Lose/End Screen, HighScore System, More Animations
Win/Lose/End Screen, HighScore System, More Animations

Also added a input field so the user can add his 3 char name in the highscore.

Fixed calculations issues when loading the highscore board.

Did some more photoshop to work with the coca cola theme

Things in the next update: SFX Sounds, Keymapper, Theme Changer, More Characters, Auto Redirect After Finishing All Buttons

Known Issuess: Scaling is a bit off, I am not good at scaling properly. Weird edges on certain animation (Scaling issue), Can't get back to the main menu after beating a high score (yet)

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -62,6 +62,7 @@
      <Compile Include="Assets\Scripts\BarTap.cs" />
      <Compile Include="Assets\Scripts\Beer.cs" />
      <Compile Include="Assets\Scripts\Customer.cs" />
+     <Compile Include="Assets\Scripts\DDestroy.cs" />
      <Compile Include="Assets\Scripts\GameManager.cs" />
      <Compile Include="Assets\Scripts\LevelManager.cs" />
      <Compile Include="Assets\Scripts\LevelUIManager.cs" />
