--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -63,11 +63,13 @@
      <Compile Include="Assets\Scripts\Beer.cs" />
      <Compile Include="Assets\Scripts\Customer.cs" />
      <Compile Include="Assets\Scripts\DDestroy.cs" />
+     <Compile Include="Assets\Scripts\GameInputManager.cs" />
      <Compile Include="Assets\Scripts\GameManager.cs" />
      <Compile Include="Assets\Scripts\LevelManager.cs" />
      <Compile Include="Assets\Scripts\LevelUIManager.cs" />
      <Compile Include="Assets\Scripts\Loader.cs" />
      <Compile Include="Assets\Scripts\MainMenu.cs" />
+     <Compile Include="Assets\Scripts\Mixer.cs" />
      <Compile Include="Assets\Scripts\Player.cs" />
  <Reference Include="Unity.Timeline.Editor">
  <HintPath>D:/Unity/Project/School/unity_protos/TapperUnity-master/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
